data/all_generated_tests/raw_wast_tests/loop_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1236.wast
;; 7. **Test Case 7**: Utilize a loop to invoke an imported function which uses `drop` and `select` instructions within its custom loops. This will test whether the loop instruction correctly processes control flow changes and data manipulation instructions across differing implementations.

(assert_invalid
  (module
    (import "env" "funcWithDropAndSelect" (func $funcWithDropAndSelect (param i32) (result i32)))
    (func $test
      (loop (result i32)
        (call $funcWithDropAndSelect)
        (drop)
        (select (i32.const 1) (i32.const 2) (i32.const 0))
        (br 0)
      )
    )
  )
  "type mismatch"
)